--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -1,22 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_xxlarge">
 
-    <include
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_shoes"
+    android:layout_width="@dimen/relative_width"
+    android:layout_height="@dimen/relative_height"
+    android:layout_margin="@dimen/margin_xlarge">
+
+    <ImageView
+        android:id="@+id/iv_list_new"
+        android:layout_width="match_parent"
+        android:layout_height="370dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/charles_shoes" />
+
+    <Button
+        android:id="@+id/btn_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/margin_medium_2"
+        android:layout_marginTop="@dimen/margin_medium_2"
+        android:background="@color/ActionBarColor"
+        android:text="NEW" />
+
+    <TextView
+        android:id="@+id/tv_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iv_list_new"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:text="@string/product_name" />
+
+
+</RelativeLayout>
+
+
+    <!--<include
         android:layout_width="320dp"
         android:layout_height="400dp"
         android:id="@+id/in_list"
         layout="@layout/list_relative"
         android:visibility="visible"
-        android:layout_gravity="center"/>
-    <include
+        android:layout_gravity="center"/>--><!--<include
         android:id="@+id/in_grid"
         layout="@layout/grid_relative"
         android:visibility="gone"
-       />
+       />-->
 
 
-</FrameLayout>
+
+
