--- a/app/src/main/res/layout/activity_proucts_details.xml
+++ b/app/src/main/res/layout/activity_proucts_details.xml
@@ -15,14 +15,27 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/ActionBarColor">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_menu_black_24dp"
+                android:layout_marginTop="@dimen/margin_medium_2"
+                android:layout_marginLeft="@dimen/margin_medium_2"
+                android:layout_marginRight="@dimen/margin_xxlarge"/>
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:title="NEW IN"
+            android:layout_marginLeft="@dimen/margin_xxlarge"
 
             />
+        </LinearLayout>
     </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
