--- a/app/src/main/res/layout/grid_relative.xml
+++ b/app/src/main/res/layout/grid_relative.xml
@@ -2,7 +2,7 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rl_shoes"
+    android:id="@+id/rl_grid"
     android:layout_width="160dp"
     android:layout_height="200dp"
     android:layout_marginLeft="@dimen/margin_medium_2">
